--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
   <!-- sponsor section -->
   <div class="sponsors">
-    <img src="./logos/Alibaba.svg" alt="">
-    <img src="./logos/Amazon.svg" alt="">
-    <img src="./logos/Daraz.pk Logo.svg" alt="">
-    <img src="./logos/Ebay.svg" alt="">
-    <img src="./logos/Rakuten.svg" alt="">
-    <img src="./logos/Walmart.svg" alt="">
-    <img src="./logos/Target.svg" alt="">
+    <div><img src="./logos/Alibaba.svg" alt=""></div>
+    <div><img src="./logos/Amazon.svg" alt=""></div>
+    <div><img src="./logos/Daraz.pk Logo.svg" alt=""></div>
+    <div><img src="./logos/Ebay.svg" alt=""></div>
+    <div><img src="./logos/Rakuten.svg" alt=""></div>
+    <div><img src="./logos/Walmart.svg" alt=""></div>
+    <div><img src="./logos/Target.svg" alt=""></div>
   </div>
 </body>
 
