--- a/index.html
+++ b/index.html
@@ -50,6 +50,74 @@
     <div><img src="./logos/Walmart.svg" alt=""></div>
     <div><img src="./logos/Target.svg" alt=""></div>
   </div>
+  <div class="text">
+    <h2>Popular collection</h2>
+  </div>
+  <div class="collection-img">
+    <div class="image-div">
+      <img src="./images/tripod.png" alt="">
+      <h3>Flex Tripod</h3>
+      <h5>$50.48</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+    <div class="image-div">
+      <img src="./images/mic.png" alt="">
+      <h3>microphone</h3>
+      <h5>$120.25</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+    <div class="image-div">
+      <img src="./images/airpod.png" alt="">
+      <h3>Airbuds</h3>
+      <h5>$100.00</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+    <div class="image-div">
+      <img src="./images/drone.png" alt="">
+      <h3>Drone</h3>
+      <h5>$980.25</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+    <div class="image-div">
+      <img src="./images/lights.png" alt="">
+      <h3>Light Setup</h3>
+      <h5>$1200.00</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+    <div class="image-div">
+      <img src="./images/setup.png" alt="">
+      <h3>Photoshoot set</h3>
+      <h5>$820.40</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+    <div class="image-div">
+      <img src="./images/camera.png" alt="">
+      <h3>Vlogging Camera</h3>
+      <h5>$1800.80</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+    <div class="image-div">
+      <img src="./images/single-light.png" alt="">
+      <h3>Green Screen</h3>
+      <h5>$25.48</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+    <div class="image-div">
+      <img src="./images/action.png" alt="">
+      <h3>Action Camera</h3>
+      <h5>$380.00</h5>
+      <p>Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
+    </div>
+  </div>
 </body>
 
 </html>
