added contacts bar

--- a/index.html
+++ b/index.html
@@ -11,113 +11,131 @@
 </head>
 
 <body>
-  <!-- top head text div -->
-  <div class="influencers-container">
-    <h3 class="corner-line">Influencer products</h3>
-    <div class="options">
-      <ul>
-        <li>Home</li>
-        <li>Products</li>
-        <li>Sign up</li>
-        <li>Log in</li>
-        <li><i class="fa-solid fa-magnifying-glass"></i></li>
-        <li><i class="fa-solid fa-cart-shopping"></i></li>
-      </ul>
+  <header>
+    <!-- top head text div -->
+    <div class="influencers-container">
+      <h3 class="corner-line">Influencer products</h3>
+      <div class="options">
+        <ul>
+          <li>Home</li>
+          <li>Products</li>
+          <li>Sign up</li>
+          <li>Log in</li>
+          <li><i class="fa-solid fa-magnifying-glass"></i></li>
+          <li><i class="fa-solid fa-cart-shopping"></i></li>
+        </ul>
+      </div>
     </div>
-  </div>
 
-  <!-- journey ad section -->
-  <div class="journey-ad">
-    <div class="quote-text">
-      <h2>Start your Journey as <br>
-        Influencer</h2>
-      <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros.
-        Lectus faucibus.</p>
-      <button class="btn-primary">Preebook now <i class="fa-duotone fa-arrow-right"></i></button>
+    <!-- journey ad section -->
+    <div class="journey-ad">
+      <div class="quote-text">
+        <h2>Start your Journey as <br>
+          Influencer</h2>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque
+          eros.
+          Lectus faucibus.</p>
+        <button class="btn-primary">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+      </div>
+      <div class="image">
+        <img src="./images/main-camera.png" alt="">
+      </div>
     </div>
-    <div class="image">
-      <img src="./images/main-camera.png" alt="">
-    </div>
-  </div>
 
-  <!-- sponsor section -->
-  <div class="sponsors">
-    <div><img src="./logos/Alibaba.svg" alt=""></div>
-    <div><img src="./logos/Amazon.svg" alt=""></div>
-    <div><img src="./logos/Daraz.pk Logo.svg" alt=""></div>
-    <div><img src="./logos/Ebay.svg" alt=""></div>
-    <div><img src="./logos/Rakuten.svg" alt=""></div>
-    <div><img src="./logos/Walmart.svg" alt=""></div>
-    <div><img src="./logos/Target.svg" alt=""></div>
-  </div>
-  <div class="text">
-    <h2>Popular collection</h2>
-  </div>
-  <div class="collection-img">
-    <div class="image-div">
-      <img src="./images/tripod.png" alt="">
-      <h3>Flex Tripod</h3>
-      <h5>$50.48</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
+    <!-- sponsor section -->
+    <div class="sponsors">
+      <div><img src="./logos/Alibaba.svg" alt=""></div>
+      <div><img src="./logos/Amazon.svg" alt=""></div>
+      <div><img src="./logos/Daraz.pk Logo.svg" alt=""></div>
+      <div><img src="./logos/Ebay.svg" alt=""></div>
+      <div><img src="./logos/Rakuten.svg" alt=""></div>
+      <div><img src="./logos/Walmart.svg" alt=""></div>
+      <div><img src="./logos/Target.svg" alt=""></div>
     </div>
-    <div class="image-div">
-      <img src="./images/mic.png" alt="">
-      <h3>microphone</h3>
-      <h5>$120.25</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
+  </header>
+  <main>
+    <div class="text">
+      <h2>Popular collection</h2>
     </div>
-    <div class="image-div">
-      <img src="./images/airpod.png" alt="">
-      <h3>Airbuds</h3>
-      <h5>$100.00</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
+    <div class="collection-img">
+      <div class="image-div">
+        <img src="./images/tripod.png" alt="">
+        <h3>Flex Tripod</h3>
+        <h5>$50.48</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
+      <div class="image-div">
+        <img src="./images/mic.png" alt="">
+        <h3>microphone</h3>
+        <h5>$120.25</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
+      <div class="image-div">
+        <img src="./images/airpod.png" alt="">
+        <h3>Airbuds</h3>
+        <h5>$100.00</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
+      <div class="image-div">
+        <img src="./images/drone.png" alt="">
+        <h3>Drone</h3>
+        <h5>$980.25</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
+      <div class="image-div">
+        <img src="./images/lights.png" alt="">
+        <h3>Light Setup</h3>
+        <h5>$1200.00</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
+      <div class="image-div">
+        <img src="./images/setup.png" alt="">
+        <h3>Photoshoot set</h3>
+        <h5>$820.40</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
+      <div class="image-div">
+        <img src="./images/camera.png" alt="">
+        <h3>Vlogging Camera</h3>
+        <h5>$1800.80</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
+      <div class="image-div">
+        <img src="./images/single-light.png" alt="">
+        <h3>Green Screen</h3>
+        <h5>$25.48</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
+      <div class="image-div">
+        <img src="./images/action.png" alt="">
+        <h3>Action Camera</h3>
+        <h5>$380.00</h5>
+        <p>Wordwide shifting <br> available <br>
+          Buyers protection possible!</p>
+      </div>
     </div>
-    <div class="image-div">
-      <img src="./images/drone.png" alt="">
-      <h3>Drone</h3>
-      <h5>$980.25</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
+    <h4 class="see-more">See More <i class="fa-solid fa-arrow-right"></i></h4>
+  </main>
+  <footer>
+    <div class="contact-bar">
+      <img src="./images/gear.png" alt="">
+      <div class="contact-text">
+        <h3>Featured products at one place</h3>
+        <p class="para">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia
+          consequat duis enim velit
+          mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+        <button class="btn-primary">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+      </div>
     </div>
-    <div class="image-div">
-      <img src="./images/lights.png" alt="">
-      <h3>Light Setup</h3>
-      <h5>$1200.00</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
-    </div>
-    <div class="image-div">
-      <img src="./images/setup.png" alt="">
-      <h3>Photoshoot set</h3>
-      <h5>$820.40</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
-    </div>
-    <div class="image-div">
-      <img src="./images/camera.png" alt="">
-      <h3>Vlogging Camera</h3>
-      <h5>$1800.80</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
-    </div>
-    <div class="image-div">
-      <img src="./images/single-light.png" alt="">
-      <h3>Green Screen</h3>
-      <h5>$25.48</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
-    </div>
-    <div class="image-div">
-      <img src="./images/action.png" alt="">
-      <h3>Action Camera</h3>
-      <h5>$380.00</h5>
-      <p>Wordwide shifting <br> available <br>
-        Buyers protection possible!</p>
-    </div>
-  </div>
+  </footer>
 </body>
 
 </html>
