--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@
         <button class="btn-primary">Join Now <i class="fa-solid fa-arrow-right"></i></button>
       </div>
     </div>
+    <div class="footer">
+      <h3>Influencer products</h3>
+      <p>Copyright © 2020 influencer products</p>
+      <p>All rights reserved</p>
+      <div class="social-icons">
+        <img src="./Instagram.png" alt="">
+        <img src="./Dribbble.png" alt="">
+        <img src="./Twitter.png" alt="">
+        <img src="./Youtube.png" alt="">
+      </div>
+    </div>
   </footer>
 </body>
 
